--- a/index.html
+++ b/index.html
@@ -3,15 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jordan Franceys - Sound Engineer & Audio Producer</title>
+    <title>Alex Thompson - Sound Engineer & Audio Producer</title>
     <meta name="description" content="Professional sound engineer specializing in mixing, mastering, recording, and audio post-production. 8+ years experience in music, film, and broadcast audio." />
-    <meta name="author" content="Jordan Franceys" />
+    <meta name="author" content="Alex Thompson" />
     <meta name="keywords" content="sound engineer, audio producer, mixing, mastering, recording studio, Nashville" />
 
-    <meta property="og:title" content="Jordan Franceys- Sound Engineer & Audio Producer" />
+    <meta property="og:title" content="Alex Thompson - Sound Engineer & Audio Producer" />
     <meta property="og:description" content="Professional sound engineer specializing in mixing, mastering, recording, and audio post-production. 8+ years experience in music, film, and broadcast audio." />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
